NEXT-309 - Add missing event listeners to icon components

--- a/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
+++ b/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
@@ -1,6 +1,7 @@
 {% block sw_icon %}
     <component
         class="sw-icon"
+        v-on="$listeners"
         :class="classes"
         :is="iconName"
         :style="styles"
