--- a/Resources/administration/src/app/component/tree/sw-tree/sw-tree.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree/sw-tree.html.twig
@@ -43,7 +43,9 @@
                                     :key="item.id"
                                     :item="item"
                                     :translationContext="translationContext"
-                                    :draggedItem="draggedItem">
+                                    :draggedItem="draggedItem"
+                                    :sortable="sortable"
+                                >
                                 </sw-tree-item>
                             {% endblock %}
                         </slot>
