NEXT-1046 - Fix auth listener, tests

--- a/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-detail/sw-settings-document-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-detail/sw-settings-document-detail.html.twig
@@ -50,7 +50,7 @@
                             <div class="sw-settings-document-detail__field_file_name_prefix">
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-document.detail.labelFileNamePrefix')"
-                                          v-model="documentConfig.fileNamePrefix">
+                                          v-model="documentConfig.filenamePrefix">
                                 </sw-field>
                             </div>
                             {% endblock %}
@@ -58,7 +58,7 @@
                             <div class="sw-settings-document-detail__field_file_name_suffix">
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-document.detail.labelFileNameSuffix')"
-                                          v-model="documentConfig.fileNameSuffix">
+                                          v-model="documentConfig.filenameSuffix">
                                 </sw-field>
                             </div>
                             {% endblock %}
